Fix amqp endpoint preview spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -297,7 +297,7 @@ main {
   font-family: "Manrope";
   font-size: 30px;
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 6rem;
   color: var(--ifm-heading-color);
 }
 
@@ -330,7 +330,7 @@ main {
 .amqp-text {
   flex: 0 1 40%;
   color: var(--ifm-font-color-base);
-  margin-top: 50px;
+  margin-top: -10px;
   text-align: right;
 }
 
